tests/snapshots/writer_test__write_csv_escaping.snap
---
source: tests/writer_test.rs
expression: output
---
name,code,country,lat,lon,elev,style,rwdir,rwlen,rwwidth,freq,desc,userdata,pics
"Airport, ""Special"" Name","A,B""C",XX,0000.000N,00000.000E,0m,0,,,,,"Description with, comma and ""quotes""",,
