tests/snapshots/writer_test__write_multiline_fields.snap
---
source: tests/writer_test.rs
expression: output
---
name,code,country,lat,lon,elev,style,rwdir,rwlen,rwwidth,freq,desc,userdata,pics
"Multi
Line
Name",MLN,XX,0000.000N,00000.000E,0m,0,,,,,"Line 1
Line 2
Line 3",,
